--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -11,9 +11,10 @@
             <item android:title="Templates"
                 android:icon="@drawable/templates"
                 android:id="@+id/templates"/>
-            <item android:title="Manual"
+            <item
+                android:id="@+id/manual"
                 android:icon="@drawable/manual"
-                android:id="@+id/manual"/>
+                android:title="Manual" />
         </menu>
     </item>
 
