--- a/app/src/main/res/drawable-v24/buttons.xml
+++ b/app/src/main/res/drawable-v24/buttons.xml
@@ -7,7 +7,7 @@
             <stroke android:color="@color/black"
                 android:width="3dp"/>
             <gradient android:startColor="@color/white"
-                android:endColor="@android:color/holo_green_dark"/>
+                android:endColor="#A1AC8D"/>
 
         </shape>
     </item>
