--- a/app/src/main/res/layout/activity_pribavki.xml
+++ b/app/src/main/res/layout/activity_pribavki.xml
@@ -83,7 +83,7 @@
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Таблица 4 - Соотношение прибавок на свободное облегание в различных си- луэтах женской одежды  " />
+                android:text="Таблица 4 - Соотношение прибавок на свободное облегание в различных силуэтах женской одежды  " />
 
             <ImageView
                 android:id="@+id/imageView12"
@@ -102,7 +102,7 @@
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Таблица 5 – Рекомендуемые величины прибавок к обхвату плеча при конст- руировании втачных рукавов  " />
+                android:text="Таблица 5 – Рекомендуемые величины прибавок к обхвату плеча при конструировании втачных рукавов  " />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -121,7 +121,7 @@
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Таблица 6 – Величины прибавок Пш. горл., Пв. горл., Пспр, Пдтс для раз- личных видов женской одежды " />
+                android:text="Таблица 6 – Величины прибавок Пш. горл., Пв. горл., Пспр, Пдтс для различных видов женской одежды " />
 
             <ImageView
                 android:id="@+id/imageView14"
