--- a/app/src/main/res/layout/activity_merki.xml
+++ b/app/src/main/res/layout/activity_merki.xml
@@ -26,11 +26,21 @@
                 android:layout_height="wrap_content"
                 android:text="Основные измерения фигуры, необходимые для конструирования одежды" />
 
+            <ImageView
+                android:id="@+id/imageView43"
+                android:layout_width="match_parent"
+                android:layout_height="558dp"
+                android:padding="8dp"
+                app:srcCompat="@drawable/merki" />
+
             <TextView
                 android:id="@+id/textView29"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:padding="8dp"
+                android:password="false"
+                android:text="@string/Merki"
+                android:textColor="@color/black" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
