--- a/app/src/main/res/layout/activity_pribavki.xml
+++ b/app/src/main/res/layout/activity_pribavki.xml
@@ -19,10 +19,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:background="@drawable/buttons"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvTab1"
+                android:padding="8dp"
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,18 +32,21 @@
 
             <ImageView
                 android:id="@+id/imageView9"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="114dp"
                 app:srcCompat="@drawable/tab1" />
 
             <View
                 android:id="@+id/view"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/black" />
 
             <TextView
                 android:id="@+id/textView4"
+                android:padding="8dp"
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,12 +54,14 @@
 
             <ImageView
                 android:id="@+id/imageView10"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="162dp"
                 app:srcCompat="@drawable/tab2" />
 
             <View
                 android:id="@+id/view2"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/black" />
@@ -62,24 +69,28 @@
             <TextView
                 android:id="@+id/textView5"
                 style="@style/buttons_manual"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Таблица 3 – Типовое  распределение  Пг  по  участкам  чертежа  конструкции  женской одежды  " />
 
             <ImageView
                 android:id="@+id/imageView11"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="126dp"
                 app:srcCompat="@drawable/tab3" />
 
             <View
                 android:id="@+id/view3"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/black" />
 
             <TextView
                 android:id="@+id/textView6"
+                android:padding="8dp"
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -87,18 +98,21 @@
 
             <ImageView
                 android:id="@+id/imageView12"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="145dp"
                 app:srcCompat="@drawable/tab4" />
 
             <View
                 android:id="@+id/view4"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/black" />
 
             <TextView
                 android:id="@+id/textView7"
+                android:padding="8dp"
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,18 +120,21 @@
 
             <ImageView
                 android:id="@+id/imageView13"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="156dp"
                 app:srcCompat="@drawable/tab5" />
 
             <View
                 android:id="@+id/view5"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/black" />
 
             <TextView
                 android:id="@+id/textView8"
+                android:padding="8dp"
                 style="@style/buttons_manual"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -125,6 +142,7 @@
 
             <ImageView
                 android:id="@+id/imageView14"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="187dp"
                 app:srcCompat="@drawable/tab6" />
