--- a/app/src/main/res/layout/fragment_ubka_solnce.xml
+++ b/app/src/main/res/layout/fragment_ubka_solnce.xml
@@ -14,10 +14,8 @@
         <ImageView
             android:id="@+id/imageView40"
             android:layout_width="0dp"
-            android:layout_height="290dp"
-            android:layout_marginStart="8dp"
+            android:layout_height="166dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:src="@drawable/ubka_solnce"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,62 +26,70 @@
 
         <TextView
             android:id="@+id/textView32"
+            style="@style/Result"
             android:layout_width="54dp"
-            android:layout_height="22dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="R1 ="
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.113"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/btResult" />
 
         <TextView
-            android:id="@+id/textView33"
+            android:id="@+id/tvResultR1"
+            style="@style/Result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:text="TextView"
+            android:layout_marginStart="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView32"
             app:layout_constraintStart_toEndOf="@+id/textView32"
             app:layout_constraintTop_toTopOf="@+id/textView32"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView34"
+            style="@style/Result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="12dp"
             android:text="R2 ="
             app:layout_constraintEnd_toEndOf="@+id/textView32"
-            app:layout_constraintHorizontal_bias="0.346"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView32"
             app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
         <TextView
-            android:id="@+id/textView35"
+            android:id="@+id/tvResultR2"
+            style="@style/Result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:text="TextView"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView34"
             app:layout_constraintStart_toEndOf="@+id/textView34"
             app:layout_constraintTop_toTopOf="@+id/textView34"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Button"
+            android:id="@+id/btResult"
+            style="@style/buttons_vichislit"
+            android:layout_width="0dp"
+            android:layout_height="71dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@color/hardOrange"
+            android:text="@string/vichislit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout"
-            android:layout_width="430dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView40">
@@ -92,14 +98,17 @@
                 android:id="@+id/etOT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:hint="Введите обхват талии" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout2"
-            android:layout_width="430dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -108,6 +117,7 @@
                 android:id="@+id/etDlinaUbki"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:hint="Введите длину юбки" />
         </com.google.android.material.textfield.TextInputLayout>
 
