--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,6 +35,7 @@
     <style name="buttons_vichislit">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="backgroundTint">#B19A52</item>
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
     </style>
