--- a/app/src/main/res/layout/activity_clients.xml
+++ b/app/src/main/res/layout/activity_clients.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/orange"
-    tools:context=".klients.KlientsActivity">
+    tools:context=".clients.ClientsActivity">
 
     <ImageView
         android:id="@+id/ivBackKlients"
@@ -37,7 +37,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/purple_700"
-        android:clickable="true"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
