--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,17 +54,21 @@
 
     <style name="Merki_style">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">55dp</item>
+        <item name="android:paddingLeft">4dp</item>
     </style>
 
     <style name="EditText_merki_style">
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_width">80dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">60dp</item>
     </style>
 
 
