--- a/app/src/main/res/layout/activity_clients.xml
+++ b/app/src/main/res/layout/activity_clients.xml
@@ -47,7 +47,7 @@
         app:srcCompat="@drawable/ic_add" />
 
     <TextView
-        android:id="@+id/textView36"
+        android:id="@+id/tvEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Empty"
