--- a/app/src/main/res/layout/activity_formuli.xml
+++ b/app/src/main/res/layout/activity_formuli.xml
@@ -86,6 +86,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tvUbkaKolokol"
         app:layout_constraintVertical_bias="1.0">
 
+        <ImageView
+            android:id="@+id/imageView79"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/pngformuls" />
     </FrameLayout>
 
     <TextView
