--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -534,7 +534,6 @@
         android:id="@+id/etDescription"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="start"
         android:hint="Заметки"
@@ -544,7 +543,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView50" />
+        app:layout_constraintTop_toBottomOf="@+id/textView53" />
 
     <TextView
         android:id="@+id/textView42"
@@ -692,54 +691,6 @@
         app:layout_constraintEnd_toStartOf="@+id/etDub"
         app:layout_constraintStart_toStartOf="@+id/textView64"
         app:layout_constraintTop_toBottomOf="@+id/textView72" />
-
-    <ImageView
-        android:id="@+id/imageView50"
-        android:layout_width="295dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView53"
-        app:srcCompat="@drawable/buttons" />
-
-    <TextView
-        android:id="@+id/tvArchivClient"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:text="Архив изделий клиента"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView50"
-        app:layout_constraintEnd_toEndOf="@+id/imageView50"
-        app:layout_constraintStart_toStartOf="@+id/imageView50"
-        app:layout_constraintTop_toTopOf="@+id/imageView50" />
-
-    <ImageView
-        android:id="@+id/imageView51"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView50"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView50"
-        app:layout_constraintTop_toTopOf="@+id/imageView50"
-        app:srcCompat="@drawable/buttons" />
-
-    <ImageView
-        android:id="@+id/ivCameraEditActivity"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView51"
-        app:layout_constraintEnd_toEndOf="@+id/imageView51"
-        app:layout_constraintStart_toStartOf="@+id/imageView51"
-        app:layout_constraintTop_toTopOf="@+id/imageView51"
-        app:srcCompat="@drawable/ic_camera" />
 
     <ImageView
         android:id="@+id/ivSaveData"
