--- a/app/src/main/res/layout/activity_formuli.xml
+++ b/app/src/main/res/layout/activity_formuli.xml
@@ -87,10 +87,10 @@
         app:layout_constraintVertical_bias="1.0">
 
         <ImageView
-            android:id="@+id/imageView79"
+            android:id="@+id/imageView50"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/pngformuls" />
+            app:srcCompat="@drawable/dacoformuls" />
     </FrameLayout>
 
     <TextView
